@startuml Class Diagram
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Hệ thống Ngân hàng - Class Diagram (Đầy đủ)

' Core Classes
class Branch {
    - branch_id: int
    - manager_id: int
}

class Role {
    - role_id: int
}

class Employee {
    - employee_id: int
    - branch_id: int
    - role_id: int
}

class Customer {
    - customer_id: int
    - registered_branch_id: int
}

class CreditScore {
    - score_id: int
    - customer_id: int
}

class AccountType {
    - account_type_id: int
}

class Account {
    - account_id: int
    - customer_id: int
    - account_type_id: int
    - branch_id: int
}

class Card {
    - card_id: int
    - account_id: int
}

class TransactionType {
    - transaction_type_id: int
}

class Transaction {
    - transaction_id: bigint
    - transaction_type_id: int
    - from_account_id: int
    - to_account_id: int
}

class SavingsInterestRate {
    - rate_id: int
}

class SavingsDeposit {
    - deposit_id: int
    - customer_id: int
    - account_id: int
    - branch_id: int
    - interest_rate_id: int
}

class SavingsTransaction {
    - savings_transaction_id: int
    - deposit_id: int
}

class CollateralType {
    - collateral_type_id: int
}

class Collateral {
    - collateral_id: int
    - customer_id: int
    - collateral_type_id: int
    - appraised_by: int
}

class LoanType {
    - loan_type_id: int
}

class LoanInterestRate {
    - rate_id: int
    - loan_type_id: int
}

class Loan {
    - loan_id: int
    - customer_id: int
    - account_id: int
    - loan_type_id: int
    - branch_id: int
    - loan_officer_id: int
    - collateral_id: int
    - interest_rate_id: int
}

class LoanPaymentSchedule {
    - schedule_id: int
    - loan_id: int
}

class LoanPayment {
    - payment_id: int
    - loan_id: int
    - schedule_id: int
    - transaction_id: bigint
}

' Relationships
Branch "1" -- "*" Employee : has
Branch "1" -- "*" Customer : registered_at
Branch "1" -- "*" Account : opened_at
Branch "1" -- "*" SavingsDeposit : at
Branch "1" -- "*" Loan : at

Role "1" -- "*" Employee : has

Employee "*" -- "1" Branch : works_at
Employee "*" -- "1" Role : has
Employee "1" -- "*" Loan : processes
Employee "1" -- "*" Collateral : appraises

Customer "1" -- "*" Account : owns
Customer "1" -- "*" SavingsDeposit : has
Customer "1" -- "*" Loan : borrows
Customer "1" -- "*" Collateral : owns
Customer "1" -- "1" CreditScore : has
Customer "*" -- "1" Branch : registered_at

AccountType "1" -- "*" Account : type_of

Account "1" -- "*" Transaction : from/to
Account "1" -- "*" Card : has
Account "1" -- "*" SavingsDeposit : linked
Account "1" -- "*" Loan : disbursed_to
Account "*" -- "1" Customer : belongs_to
Account "*" -- "1" Branch : opened_at
Account "*" -- "1" AccountType : type

Card "*" -- "1" Account : belongs_to

TransactionType "1" -- "*" Transaction : type_of

Transaction "*" -- "1" TransactionType : type
Transaction "*" -- "0..1" Account : from
Transaction "*" -- "0..1" Account : to

SavingsInterestRate "1" -- "*" SavingsDeposit : rate

SavingsDeposit "*" -- "1" Customer : belongs_to
SavingsDeposit "*" -- "1" Account : linked_to
SavingsDeposit "*" -- "1" Branch : at
SavingsDeposit "*" -- "1" SavingsInterestRate : uses
SavingsDeposit "1" -- "*" SavingsTransaction : has

CollateralType "1" -- "*" Collateral : type_of

Collateral "*" -- "1" Customer : owns
Collateral "*" -- "1" CollateralType : type
Collateral "*" -- "0..1" Employee : appraised_by
Collateral "1" -- "0..1" Loan : secures

LoanType "1" -- "*" Loan : type_of
LoanType "1" -- "*" LoanInterestRate : has_rates

LoanInterestRate "*" -- "1" LoanType : for

Loan "*" -- "1" Customer : borrows
Loan "*" -- "1" Account : disbursed_to
Loan "*" -- "1" LoanType : type
Loan "*" -- "1" Branch : at
Loan "*" -- "1" Employee : processed_by
Loan "*" -- "0..1" Collateral : secured_by
Loan "*" -- "0..1" LoanInterestRate : uses
Loan "1" -- "*" LoanPaymentSchedule : has
Loan "1" -- "*" LoanPayment : payments

LoanPaymentSchedule "*" -- "1" Loan : for
LoanPaymentSchedule "1" -- "0..*" LoanPayment : paid_by

LoanPayment "*" -- "1" Loan : for
LoanPayment "*" -- "0..1" LoanPaymentSchedule : pays
LoanPayment "*" -- "0..1" Transaction : via

@enduml
